--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@nestjs/platform-express": "^10.0.0",
     "ari-client": "^2.2.0",
     "axios": "^1.8.1",
+    "child_process": "^1.0.2",
     "dotenv": "^16.4.7",
     "openai": "^4.86.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "util": "^0.12.5",
     "ws": "^8.18.1"
   },
   "devDependencies": {
