--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^11.0.11",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/serve-static": "^5.0.3",
     "ari-client": "^2.2.0",
     "axios": "^1.8.1",
     "dotenv": "^16.4.7",
